chore: fix to weird exception formatting