@@ -4,6 +4,6 @@ import be.kdg.team22.gamesservice.domain.game.GameId;
 
 public class DuplicateGameException extends RuntimeException {
     public DuplicateGameException(GameId id) {
-        super("A game with id '%s' already exists".formatted(id.value()));
+        super(String.format("A game with id '%s' already exists", id.value()));
     }
 }
